--- a/index/index.html
+++ b/index/index.html
@@ -1,37 +1,22 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DNSGOLDEN</title>
-    <link rel="stylesheet" href="/index/index.css">
-    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
-        type="text/css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="ico" href="ico.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/index/styles23.css">
-</head>
-<!-- <body class="bg-gradient-to-b from-gray-800 to-blue-800"> -->
-</head>
-<body>
-    <!-- محتویات صفحه -->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>DNSGOLDEN</title>
+        <link rel="stylesheet" href="/index/index.css">
+        <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
+            type="text/css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <link rel="ico" href="ico.png" type="image/x-icon">
+        <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/index/styles23.css">
+    </head>
     
-    <script>
-        // JavaScript to redirect based on device type
-        window.onload = function() {
-            if (window.innerWidth <= 768) { // This checks for mobile devices
-                // If it's a mobile device, do not redirect, just continue
-                return;
-            } else {
-                // If it's a desktop or larger, redirect to the desktop version
-                window.location.href = "/desktop.html"; // Link to your desktop-specific page
-            }
-        }
-    </script>
-</body>
+<!-- <body class="bg-gradient-to-b from-gray-800 to-blue-800"> -->
 
     <header>
         <nav>
