--- a/index/index.html
+++ b/index/index.html
@@ -2,19 +2,18 @@
 <html lang="fa" dir="rtl">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>DNSGOLDEN</title>
         <link rel="stylesheet" href="/index/index.css">
         <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
             type="text/css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
-        <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <link rel="ico" href="ico.png" type="image/x-icon">
+        <link rel="ico" href="/index/ico.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/index/styles23.css">
     </head>
-    
+
 <!-- <body class="bg-gradient-to-b from-gray-800 to-blue-800"> -->
 
     <header>
