--- a/index/index.html
+++ b/index/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="ico" href="/index/ico.png" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/index/styles23.css">
+        <link rel="stylesheet" href="/index/styles.css">
     </head>
 
 <!-- <body class="bg-gradient-to-b from-gray-800 to-blue-800"> -->
