--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     
             <div class="flex items-center justify-center">
                 <img src="/index/insta.png" alt="Instagram Logo" class="w-16 h-16 mr-4">
-                <a href="#" class="btn btn-secondary">مشاهده اینستاگرام</a>
+                <a href="https://www.instagram.com/dnsgolden.shop" class="btn btn-secondary">مشاهده اینستاگرام</a>
             </div>
         </div>
     </section>
